fix spacing above and below head

--- a/MT-Manuscript-archival/style-mt-html.css
+++ b/MT-Manuscript-archival/style-mt-html.css
@@ -370,6 +370,7 @@ p{
 }
 .head{
 	font-weight:300;
+	line-height:0em;
 }
 .note{
 	display:inline;
